--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
         <div class="message-item">
             <div class="mb-3">
                 <div for="alias-input" class="form-text">Conference alias:</div>
-                <input id="alias-input" value="dev-portal" class="form-control-lg" aria-describedby="aliasHelp" />
+                <input id="alias-input" value="looking-glass" class="form-control-lg" aria-describedby="aliasHelp" />
                 <div id="aliasHelp" class="form-text">Enter a unique conference name</div>
             </div>
             <div class="btn-group">
