--- a/www/index.html
+++ b/www/index.html
@@ -28,11 +28,11 @@
 
 </head>
 
-<body style="background-color: white;">
+<body>
 
     <div id="video-container" class="videos-container">
     </div>
-    <div id="clip-container" class="clip-container1"></div>
+    <!-- <div id="clip-container" class="clip-container1"></div> -->
     <div id="screenshare-container" class="screenshare-container"></div>
 
     <div class="main-controls-container">
