--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Simple Web Video Conference Application</title>
+    <title>Looking Glass Broadcaster</title>
 
     <script type="text/javascript" src="https://unpkg.com/@voxeet/voxeet-web-sdk@latest/dist/voxeet-sdk.js">
     </script>
